<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Edan</string>

    <string name="barrio" translatable="false">Barrio</string>
    <string name="sector" translatable="false">Sector</string>
    <string name="urbanizacion" translatable="false">Urbanización</string>

    <string name="caserio" translatable="false">Caserío</string>
    <string name="anexo" translatable="false">Anexo</string>

    <string name="calle" translatable="false">Calle</string>
    <string name="manzana" translatable="false">Manzana</string>

    <string name="edificio" translatable="false">Edificio</string>
    <string name="piso" translatable="false">Piso</string>
    <string name="dpto" translatable="false">Dpto</string>

    <string name="close_session" translatable="false">Cerrar sesión</string>

    <string name="hello">Hello</string>
    <string name="user_input">User</string>
    <string name="pass_input">Password</string>
    <string name="login">Login</string>

    <string name="done">Done</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="forms">Forms</string>
    <string name="user">User</string>
    <string name="name">Name</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <string name="loading">Loading</string>

    <string name="quantity">Quantity</string>

    <string name="none">None</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude (m.a.s.l.)</string>
    <string name="means_transport">Means of transport</string>
    <string name="reference_point">Reference point</string>

    <string name="danger_group">Danger group</string>
    <string name="danger_type">Danger</string>
    <string name="occurrence_date">Date of occurrence</string>
    <string name="occurrence_hour">Time of occurrence</string>
    <string name="department">Department</string>
    <string name="province">Province</string>
    <string name="district">District</string>
    <string name="locality">Locality</string>
    <string name="zone_type">Zone type</string>

    <string name="select_form">Select form</string>
    <string name="form_one">Form One</string>
    <string name="form_two">Form Two</string>
    <string name="short_form_two_a" translatable="false">2a</string>
    <string name="short_form_two_b" translatable="false">2b</string>

    <string name="title_damage_one">@string/life_health</string>
    <string name="injured_people">Injured people</string>
    <string name="trapped_people">Trapped people</string>
    <string name="isolated_people">Isolated people</string>
    <string name="missing_people">Missing people</string>
    <string name="deceased_people">Deceased people</string>

    <string name="title_damage_two">Basic Services</string>
    <string name="water">Water</string>
    <string name="drainage">Drainage</string>
    <string name="electric_power">Electric power</string>
    <string name="telephony">Telephony</string>
    <string name="gas">Gas</string>

    <string name="title_damage_three">Infrastructure</string>
    <string name="households">Households</string>
    <string name="roads">Roads</string>
    <string name="bridges">Bridges</string>
    <string name="health_establishments">Health establishments</string>

    <string name="title_activities">Activities to do</string>
    <string name="search_rescue">Search and rescue</string>
    <string name="evacuation">Evacuation</string>
    <string name="health_care">Health care</string>
    <string name="edan_team">Edan team</string>
    <string name="control_measures">Control measures</string>

    <string name="title_needs">External support needs</string>
    <string name="humanitarian_goods">Humanitarian aid goods</string>
    <string name="heavy_machinery">Heavy machinery</string>
    <string name="technical_assistance">Technical assistance</string>

    <string name="observation">Observation</string>
    <string name="other_activities">Other activities</string>
    <string name="other_needs">Other needs</string>
    
    <string name="household_info">Household Information</string>
    <string name="household_address">Address</string>
    <string name="household_lot_number">N°/Lot</string>
    <string name="household_owner">Owner</string>
    <string name="household_condition">Household condition</string>
    <string name="household_material_type">Material type</string>
    <string name="roof">Roof</string>
    <string name="wall">Wall</string>
    <string name="floor">Floor</string>

    <string name="no_affected">No affected</string>
    <string name="affected">Affected</string>
    <string name="uninhabitable">Uninhabitable</string>
    <string name="destroyed">Destroyed</string>

    <string name="family_info">Family information</string>
    <string name="family_head">Head of family</string>
    <string name="full_name">Surname, Name</string>
    <string name="age">Age</string>
    <string name="identity_document">Identity document</string>
    <string name="type">Type</string>
    <string name="number">Number</string>
    
    <string name="brick">Brick or cement block</string>
    <string name="stone_ashlar">Stone or ashlar with lime or cement</string>
    <string name="adobe">Adobe or tapial</string>
    <string name="quincha">Quincha (cane with mud)</string>
    <string name="stone_mud">Stone with mud (pirca)</string>
    <string name="wood">Wood</string>
    <string name="mat">Mat</string>
    <string name="other_material">Other material</string>

    <string name="concrete">Reinforced concrete</string>
    <string name="roof_tiles">Roof tiles</string>
    <string name="calamine_sheet">Calamine sheet</string>
    <string name="cane_mat">Cane or reed</string>
    <string name="straw_palm">Straw, palm leaves</string>

    <string name="parquet">Parquet or polished wood</string>
    <string name="asphalt_sheets">Asphalt sheets, vinyls or similar</string>
    <string name="tile_terrazzo_ceramic">Tile, terrazzo, ceramic</string>
    <string name="cement">Cement</string>
    <string name="dirt">Dirt</string>

    <string name="dni">DNI</string>
    <string name="passport">Passport</string>
    <string name="immigration_card">Immigration card</string>
    <string name="another_document">Another document</string>
    <string name="capture_image">Capture image</string>
    <string name="add_family_member">Add family member</string>
    <string name="surname_name">Surname, Name</string>

    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="life_health">Life and health</string>
    <string name="condition">Condition</string>
    
    <string name="damaged">Damaged</string>
    <string name="injured">Injured</string>

    <string name="personal_injury">Personal injury</string>
    <string name="missing">Missing</string>
    <string name="deceased">Deceased</string>
    <string name="camera">Camera</string>

    <string name="empty_list">Empty list</string>
    <string name="upload">Upload file</string>
    <string name="open">Open</string>
    <string name="open_file">Open file</string>
    <string name="cloud">Cloud</string>
    <string name="options">Options</string>

    <string name="upload_successful">Successfully uploaded</string>
    <string name="upload_error">There was an error, try later</string>
    <string name="map">Map</string>
    <string name="gen_inf">General information</string>
    <string name="household">Household</string>
    <string name="members">Family Members</string>
    <string name="back_quit">Are you sure you want to quit current form?</string>
    
    <!-- livelihood resources -->
    <string name="add_livelihood">Add livelihood</string>

    <string name="livelihood">Livelihood</string>

    <string name="farming">Farming</string>
    <string name="livestock">Livestock</string>
    <string name="commerce">Commerce</string>
    <string name="tourism">Tourism</string>
    <string name="fishing">Fishing</string>
    <string name="others">Others</string>

    <string name="amount_lost">Lost amount</string>
    <string name="amount_affected">Affected amount</string>

    <string name="crops_bread">Bread carry crops</string>
    <string name="crops_permanent">Permanent crops</string>
    <string name="crops_transitional">Transitional crops</string>
    <string name="crops_no_permanent">No permanent crops</string>
    <string name="beekeeping">Beekeeping</string>

    <string name="bovine">Bovine</string>
    <string name="equine">Equine</string>
    <string name="ovine">Ovine</string>
    <string name="camelid">Camelid</string>
    <string name="porcine">Porcine</string>
    <string name="minor_animals">Minor animals</string>
    
    <string name="store">Store</string>
    <string name="restaurant">Restaurant</string>
    <string name="workshop">Workshop</string>
    <string name="shoe_shop">Shoe shop</string>

    <string name="tourist_service">Tourist recreation service</string>
    <string name="lodging">Lodging</string>
    <string name="tourist_transport">Tourist transport company</string>
    <string name="hotel">Hotel</string>

    <string name="natural_resource">Natural resource</string>
    <string name="fish_farm">Fish farm</string>
    <string name="fishing_tackle">Fishing tackle</string>
    <string name="boat">Boat</string>
    <string name="canning">Canning</string>
    <string name="search">Search</string>
    <string name="birthdate">Birthdate</string>
    <string name="household_use">Use of the household</string>
    <string name="surname">Surname</string>
    <string name="close">Close</string>
    <string name="weeks">Weeks</string>
    <string name="pregnant">Pregnant</string>
    <string name="person_disability">Person with disability</string>
    <string name="chronic_disease_type">Chronic disease type</string>
    <string name="remove_file">Remove file</string>
    <string name="user_not_found">User not found</string>
    <string name="no_username">Please enter a valid username</string>
    <string name="no_password">Please enter a valid password</string>
    <string name="to_delete">Are you sure you want to remove this file?</string>
    <string name="injury_severity">Injury severity</string>
    <string name="mild">Mild</string>
    <string name="moderate">Moderate</string>
    <string name="serious">Serious</string>
</resources>
