<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:textColor="@color/colorPrimary"
        android:paddingHorizontal="@dimen/dim_big"
        android:paddingVertical="@dimen/dim_xbig"
        android:text="@string/select_form"
        android:textSize="@dimen/text_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/form_one"
        android:background="?selectableItemBackground"
        android:textSize="@dimen/text_big"
        android:padding="@dimen/dim_big"
        android:text="@string/form_one"
        android:drawableStart="@drawable/ic_folder_24dp"
        android:drawablePadding="@dimen/dim_xbig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/form_two"
        android:background="?selectableItemBackground"
        android:textSize="@dimen/text_big"
        android:padding="@dimen/dim_big"
        android:text="@string/form_two"
        android:drawableStart="@drawable/ic_folder_24dp"
        android:drawablePadding="@dimen/dim_xbig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>