<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.text.InputType"/>
        <import type="tech.ankainn.edanapplication.binding.Converter"/>
        <variable
            name="cancelVisibility"
            type="boolean" />
        <variable
            name="member"
            type="tech.ankainn.edanapplication.model.formTwo.MemberData" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dim_nor"
                android:layout_marginHorizontal="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:hint="@string/surname_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={member.name}"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dim_nor"
                android:layout_marginHorizontal="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:hint="@string/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={Converter.integerToString(member.age)}"
                    android:maxLength="3"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="@dimen/dim_nor"
                android:layout_marginTop="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:hint="@string/gender"
                android:labelFor="@id/text_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:text="@={member.gender}"
                    android:inputType="@{InputType.TYPE_NULL}"
                    dropdown="@{@stringArray/gender}"
                    android:id="@+id/text_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="@dimen/dim_big"
                android:layout_marginHorizontal="@dimen/dim_big"
                android:text="@string/identity_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dim_nor"
                android:layout_marginHorizontal="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:hint="@string/type"
                android:labelFor="@id/text_id_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:text="@={member.idType}"
                    android:inputType="@{InputType.TYPE_NULL}"
                    dropdown="@{@stringArray/id_types}"
                    android:id="@+id/text_id_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dim_nor"
                android:layout_marginHorizontal="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:hint="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={Converter.integerToString(member.idNumber)}"
                    android:maxLength="8"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_marginTop="@dimen/dim_big"
                android:layout_marginHorizontal="@dimen/dim_big"
                android:text="@string/life_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dim_nor"
                android:layout_marginHorizontal="@dimen/dim_nor"
                android:hint="@string/condition"
                android:labelFor="@id/text_condition"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:text="@={member.condition}"
                    android:inputType="@{InputType.TYPE_NULL}"
                    dropdown="@{@stringArray/condition}"
                    android:id="@+id/text_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/personal_injury"
                android:labelFor="@id/text_personal_injury"
                android:layout_marginHorizontal="@dimen/dim_nor"
                android:layout_marginTop="@dimen/dim_nor"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:text="@={member.personalInjury}"
                    android:inputType="@{InputType.TYPE_NULL}"
                    android:id="@+id/text_personal_injury"
                    dropdown="@{@stringArray/personal_injury}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:gravity="end"
                android:paddingVertical="4dp"
                android:paddingHorizontal="12dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    visibleGone="@{cancelVisibility}"
                    android:text="@string/cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:text="@string/save"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>