<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="tech.ankainn.edanapplication.binding.Converter" />
        <variable
            name="title"
            type="String" />
        <variable
            name="holder"
            type="tech.ankainn.edanapplication.model.app.formOne.SelectableItemData" />
    </data>

    <LinearLayout
        android:layout_marginTop="@dimen/dim_nor"
        android:layout_marginHorizontal="@dimen/dim_nor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:text="@{title, default= TITLE}"
            android:maxLines="3"
            android:minLines="3"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/quantity"
            android:layout_marginHorizontal="@dimen/dim_nor"
            android:layout_gravity="start"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="100dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_quantity"
                android:text="@={Converter.integerToString(holder.quantity)}"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchView"
            android:checked="@{holder.selection}"
            app:useMaterialThemeColors="false"
            app:track="@drawable/switch_track"
            android:thumb="@drawable/switch_thumb"
            app:showText="true"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</layout>